metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/workspan__PartnerReferral__c.object-meta.xml
<CustomObject>
    <description>This object represents our partner&apos;s data about the Opportunity Referral. They are not supposed to be populated or edited in Salesforce.
A combination of Opportunity Referral plus related Partner Opportunity Referral records in Salesforce represents a Referral Opportunity in WorkSpan.</description>
    <label>Partner Opportunity Referral</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Partner Opportunity Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Opportunity Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>