metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AccountOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__AccountOwnerEmail__c</fullName>
    <description>OOB this it the owner of the Account that is selected on the Opportunity, but it can be changed in your partner&apos;s org.</description>
    <inlineHelpText>Email of the owner of the Account which is associated with the Referral in your partner&apos;s org</inlineHelpText>
    <label>Partner Account Owner Email</label>
    <type>Email</type>
</CustomField>