metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ApnCrmUniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>workspan__ApnCrmUniqueIdentifier__c</fullName>
    <description>If this field is populated, it means a Referral was created in the AWS ACE system.</description>
    <inlineHelpText>Id of the Referral in AWS ACE</inlineHelpText>
    <label>APN CRM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>