metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSCreatedDate__c</fullName>
    <inlineHelpText>Date when referral was created in ACE</inlineHelpText>
    <label>AWS Created Date</label>
    <type>Date</type>
</CustomField>