metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSISVSuccessManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSISVSuccessManagerEmail__c</fullName>
    <description>Email of the ISV Success Manager on the Opportunity. Primary point of contact from AWS on the opportunity for the Technology partners</description>
    <inlineHelpText>Email of the ISV Success Manager</inlineHelpText>
    <label>AWS ISV Success Manager (ISM) Email</label>
    <type>Email</type>
</CustomField>