metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSISVSuccessManagerName__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSISVSuccessManagerName__c</fullName>
    <description>Name of the ISV Success Manager on the Opportunity. Primary point of contact from AWS on the opportunity for the Technology partners</description>
    <inlineHelpText>Name of the ISV Success Manager</inlineHelpText>
    <label>AWS ISV Success Manager (ISM) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>