metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSLastModifiedDate__c</fullName>
    <inlineHelpText>Referral last updated by AWS.</inlineHelpText>
    <label>AWS Last Modified Date</label>
    <type>DateTime</type>
</CustomField>