metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSPartnerReviewComments__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSPartnerReviewComments__c</fullName>
    <description>Review comments provided by the partner.</description>
    <inlineHelpText>Review comments provided by the partner.</inlineHelpText>
    <label>Partner Review Comments</label>
    <type>TextArea</type>
</CustomField>