metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSPartnerSuccessManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSPartnerSuccessManagerEmail__c</fullName>
    <description>Email of the Partner Success Manager on the Opportunity. Primary point of contact from AWS on the opportunity for the Consulting partners</description>
    <inlineHelpText>Email of the Partner Success Manager</inlineHelpText>
    <label>AWS Partner Success Manager Email</label>
    <type>Email</type>
</CustomField>