metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSPartnerSuccessManagerName__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSPartnerSuccessManagerName__c</fullName>
    <description>Name of the Partner Success Manager on the Opportunity. Primary point of contact from AWS on the opportunity for the Consulting partners</description>
    <inlineHelpText>Name of the Partner Success Manager</inlineHelpText>
    <label>AWS Partner Success Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>