metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSWWPSPDMEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSWWPSPDMEmail__c</fullName>
    <description>Email of the relevant Partner Development manager on the opportunity</description>
    <inlineHelpText>Email of the relevant Partner Development manager</inlineHelpText>
    <label>WWPS PDM Email</label>
    <type>Email</type>
</CustomField>