metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__AWSWWPSPDMName__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSWWPSPDMName__c</fullName>
    <description>Name of the relevant Partner Development manager on the opportunity</description>
    <inlineHelpText>Name of the relevant Partner Development manager</inlineHelpText>
    <label>WWPS PDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>