metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>workspan__BusinessUnit__c</fullName>
    <inlineHelpText>Your partner&apos;s business unit that owns the Referral</inlineHelpText>
    <label>Partner Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>