metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__CloseDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__CloseDate__c</fullName>
    <inlineHelpText>Date when the Referral is closed according to your partner</inlineHelpText>
    <label>Partner Close Date</label>
    <type>Date</type>
</CustomField>