metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ClosedLostReason__c.field-meta.xml
<CustomField>
    <fullName>workspan__ClosedLostReason__c</fullName>
    <inlineHelpText>Referral closed lost reason provided by your partner</inlineHelpText>
    <label>Partner Closed Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>