metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__CloseQuarter__c.field-meta.xml
<CustomField>
    <fullName>workspan__CloseQuarter__c</fullName>
    <inlineHelpText>Quarter when the Referral is closed according to your partner</inlineHelpText>
    <label>Partner Close Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>