metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ContractEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__ContractEffectiveDate__c</fullName>
    <inlineHelpText>Date when your partner&apos;s obligations outlined in the contract begin</inlineHelpText>
    <label>Partner Contract Effective Date</label>
    <type>Date</type>
</CustomField>