metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ContractExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__ContractExpiryDate__c</fullName>
    <inlineHelpText>Date when your partner&apos;s contract expires</inlineHelpText>
    <label>Partner Contract Expiry Date</label>
    <type>Date</type>
</CustomField>