metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__CRMAccountName__c.field-meta.xml
<CustomField>
    <fullName>workspan__CRMAccountName__c</fullName>
    <description>OOB this is the Name of the Account that is selected on the Opportunity, but it can be changed in your partner&apos;s org.</description>
    <inlineHelpText>Name of the Account that is associated with the Referral according to your partner</inlineHelpText>
    <label>Partner CRM Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>