metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__DealSize__c.field-meta.xml
<CustomField>
    <fullName>workspan__DealSize__c</fullName>
    <inlineHelpText>Deal size of the Referral according to your partner</inlineHelpText>
    <label>Partner Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>