metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__DealSizeCurrency__c.field-meta.xml
<CustomField>
    <fullName>workspan__DealSizeCurrency__c</fullName>
    <inlineHelpText>Currency code of the Deal Size value according to your partner</inlineHelpText>
    <label>Partner Deal Size Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>