metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ForecastValue__c.field-meta.xml
<CustomField>
    <fullName>workspan__ForecastValue__c</fullName>
    <inlineHelpText>Forecasted value of the Referral according to your partner</inlineHelpText>
    <label>Partner Forecast Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>