metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ForecastValueCurrency__c.field-meta.xml
<CustomField>
    <fullName>workspan__ForecastValueCurrency__c</fullName>
    <inlineHelpText>Currency code of the Forecast Value amount according to your partner</inlineHelpText>
    <label>Partner Forecast Value Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>