metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleApprovalNotes__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleApprovalNotes__c</fullName>
    <inlineHelpText>Comments provided by Google while accepting the referral</inlineHelpText>
    <label>Google Approval Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>