metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleCustomerContactVectorId__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleCustomerContactVectorId__c</fullName>
    <inlineHelpText>Customer&apos;s unique reference in Google&apos;s system</inlineHelpText>
    <label>Google Customer Contact Vector ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>