metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleLeadApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleLeadApprovalStatus__c</fullName>
    <inlineHelpText>Status of lead approval provided by Google</inlineHelpText>
    <label>Lead Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>