metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleLeadId__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleLeadId__c</fullName>
    <inlineHelpText>Unique ID for the referral provided by Google</inlineHelpText>
    <label>Google Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>