metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleLeadOwner__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleLeadOwner__c</fullName>
    <inlineHelpText>Owner of the referral in Google</inlineHelpText>
    <label>Google Lead Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>