metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleRegionCode__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleRegionCode__c</fullName>
    <inlineHelpText>Standard Country / Region codes provided by Google</inlineHelpText>
    <label>Google Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>