metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleRejectionComments__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleRejectionComments__c</fullName>
    <inlineHelpText>Comments provided by Google for not accepting the referral</inlineHelpText>
    <label>Google Rejection Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>