metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__GoogleReviewDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleReviewDate__c</fullName>
    <inlineHelpText>Date when the Referral is closed according to your partner</inlineHelpText>
    <label>Google Review Date</label>
    <type>Date</type>
</CustomField>