metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__MicrosoftPartnerCenterReferralId__c.field-meta.xml
<CustomField>
    <fullName>workspan__MicrosoftPartnerCenterReferralId__c</fullName>
    <description>Id of the Referral in Microsoft Partner Center.</description>
    <inlineHelpText>Id of the Referral in Microsoft Partner Center.</inlineHelpText>
    <label>MPC Referral ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>