metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__MicrosoftPartnerCenterReferralLink__c.field-meta.xml
<CustomField>
    <fullName>workspan__MicrosoftPartnerCenterReferralLink__c</fullName>
    <description>Link to the Referral in Microsoft Partner Center.</description>
    <inlineHelpText>Link to the Referral in Microsoft Partner Center.</inlineHelpText>
    <label>Microsoft Partner Center Referral Link</label>
    <type>Url</type>
</CustomField>