metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__OpportunityOwnerLastName__c.field-meta.xml
<CustomField>
    <fullName>workspan__OpportunityOwnerLastName__c</fullName>
    <description>OOB this is the owner of the Opportunity that the Referral is linked to, but it can be changed in your partner&apos;s org.</description>
    <inlineHelpText>Last name of the owner of the Opportunity which is associated with the Referral in your partner&apos;s org</inlineHelpText>
    <label>Partner Opportunity Owner Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>