metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__OpportunitySource__c.field-meta.xml
<CustomField>
    <fullName>workspan__OpportunitySource__c</fullName>
    <inlineHelpText>Source of the Opportunity according to your partner</inlineHelpText>
    <label>Partner Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>