metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__Partner__c.field-meta.xml
<CustomField>
    <fullName>workspan__Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner</label>
    <referenceTo>workspan__Partner__c</referenceTo>
    <relationshipLabel>Partner Referrals</relationshipLabel>
    <relationshipName>PartnerReferrals</relationshipName>
    <type>Lookup</type>
</CustomField>