metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__PartnerCustomFields__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerCustomFields__c</fullName>
    <description>Any partner fields outside of the package data model are stored in this field as raw JSON to be displayed on the main Referral LWC. See the user guide for more details.</description>
    <inlineHelpText>Stores WorkSpan dynamic fields in JSON</inlineHelpText>
    <label>Partner Custom Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>