metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__PartnerManagerFirstName__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerManagerFirstName__c</fullName>
    <inlineHelpText>Partner Manager Details - first name of the partner manager according to your partner</inlineHelpText>
    <label>Partner PDM First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>