metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__PartnerManagerLastName__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerManagerLastName__c</fullName>
    <inlineHelpText>Partner Manager Details - last name of the partner manager according to your partner</inlineHelpText>
    <label>Partner PDM Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>