metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__PartnerManagerPhone__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerManagerPhone__c</fullName>
    <inlineHelpText>Partner Manager Details - primary phone of the partner manager according to your partner</inlineHelpText>
    <label>Partner PDM Phone</label>
    <type>Phone</type>
</CustomField>