metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__PartnerSourceRefID__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerSourceRefID__c</fullName>
    <label>Partner Source Ref ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>