metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__Probability__c.field-meta.xml
<CustomField>
    <fullName>workspan__Probability__c</fullName>
    <inlineHelpText>The probability of the Referral to be closed won according to your partner</inlineHelpText>
    <label>Partner Win Probability %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>