metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__Referral__c.field-meta.xml
<CustomField>
    <fullName>workspan__Referral__c</fullName>
    <label>Referral</label>
    <referenceTo>workspan__Referral__c</referenceTo>
    <relationshipLabel>Partner Referrals</relationshipLabel>
    <relationshipName>PartnerReferrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>