metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ReferralReceivedOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralReceivedOn__c</fullName>
    <inlineHelpText>Records the date on which your partner received the Referral from you</inlineHelpText>
    <label>Referral Received On by Partner</label>
    <type>DateTime</type>
</CustomField>