metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ReferralSentOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralSentOn__c</fullName>
    <inlineHelpText>Records the date on which your partner sent the Referral to you</inlineHelpText>
    <label>Referral Sent On by Partner</label>
    <type>DateTime</type>
</CustomField>