metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ReferralStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralStatus__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <inlineHelpText>Describes the status of the Referral according to your partner</inlineHelpText>
    <label>Partner Referral Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>