metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ReferralStatusChangeReason__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralStatusChangeReason__c</fullName>
    <inlineHelpText>Reason for Referral status change on your partner side</inlineHelpText>
    <label>Partner Referral Status Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>