metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__ReferralSubStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralSubStatus__c</fullName>
    <inlineHelpText>Describes the sub status of the Referral according to your partner</inlineHelpText>
    <label>Partner Referral Sub-Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>