metadata/sf-prod/force-app/main/default/objects/workspan__PartnerReferral__c/fields/workspan__Region__c.field-meta.xml
<CustomField>
    <fullName>workspan__Region__c</fullName>
    <inlineHelpText>Your partner&apos;s division that owns the Referral</inlineHelpText>
    <label>Partner Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>